--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "training_authorization",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,29 +15,20 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/config": "^3.3.0",
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.15.11",
-    "@types/pg": "^8.6.5",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/validator": "^13.7.15",
-    "@types/yamljs": "^0.2.31",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
-  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "config": "^3.3.8",
-    "express": "^4.18.2",
-    "express-openapi-validator": "^4.13.8",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.8.0",
-    "sequelize-cli": "^6.5.1",
-    "sequelize-typescript": "^2.1.5",
-    "swagger-ui-express": "^4.5.0",
-    "yamljs": "^0.3.0"
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "config": "^3.3.9",
+    "pg": "^8.11.1",
+    "sequelize-cli": "^6.6.1",
+    "sequelize-typescript": "^2.1.5"
+  },
+  "devDependencies": {
+    "@types/config": "^3.3.0",
+    "@types/node": "^20.3.3",
+    "@types/pg": "^8.10.2",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
