--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.1"
-
+name: scheme_1
 volumes:
   pg_selectel:
 
 services:
-  pg_db_scheme_1:
+  pg_db:
     image: postgres:14.1-alpine
     environment:
       - POSTGRES_PASSWORD=123
